syntax = "proto3";

package user;

option go_package = "/user";

service UserService {
  rpc Register (RegisterReq) returns (RegisterResp); // 注册
  rpc Login (LoginReq) returns (LoginResp); // 登陆
  rpc GetUserInfo (UserInfoReq) returns (UserInfoResp); // 获取用户信息，通过token验证
}

message RegisterReq {
  string password = 1;
  repeated string like = 2;
  string username = 3;
}

message RegisterResp {
  string user_id = 1;
}

message LoginReq {
  string user_id = 1;
  string password = 2;
}

message LoginResp {
  string access_token = 1;
}

message UserInfoReq {
}

message UserInfoResp {
  string user_id = 1;
  repeated string like = 2;
  repeated float like_embedding = 3;
  string create_at = 4;
  string update_at = 5;
  string username = 6;
}
